force-app/main/default/objects/Knowledge__kav/fields/Codify_Article_Body__c.field-meta.xml
<CustomField>
    <fullName>Codify_Article_Body__c</fullName>
    <label>Article Body</label>
    <type>Html</type>
    <length>32768</length>
    <description
  >The drafted article body: symptom, root cause, resolution steps, and provenance. Held on a Codify-owned field so the project does not have to assume the API name of whatever body field an org already uses.</description>
</CustomField>