force-app/main/default/objects/Knowledge__kav/fields/Codify_Generated__c.field-meta.xml
<CustomField>
    <fullName>Codify_Generated__c</fullName>
    <label>Codify Generated</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description
  >Marks drafts Codify authored, so the review queue can be filtered to them and so a reviewer always knows the draft started from a technician's recap.</description>
</CustomField>