force-app/main/default/objects/Knowledge__kav/fields/Codify_Original_Recap__c.field-meta.xml
<CustomField>
    <fullName>Codify_Original_Recap__c</fullName>
    <label>Codify Original Recap</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description
  >The technician's verbatim recap, carried onto the draft so a Knowledge owner can review the article side by side with what was actually said rather than trusting the draft alone.</description>
</CustomField>