force-app/main/default/objects/Knowledge__kav/fields/Codify_Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Codify_Root_Cause__c</fullName>
    <label>Codify Root Cause</label>
    <type>Text</type>
    <length>255</length>
    <description
  >The root cause this article addresses, so published knowledge can be searched by cause as well as symptom.</description>
</CustomField>