force-app/main/default/objects/Knowledge__kav/fields/Codify_Source_Case__c.field-meta.xml
<CustomField>
    <fullName>Codify_Source_Case__c</fullName>
    <label>Codify Source Case</label>
    <type>Text</type>
    <length>18</length>
    <description>The Case whose fix this article documents.</description>
</CustomField>