force-app/main/default/objects/Knowledge__kav/fields/Codify_Source_Resolution_Log__c.field-meta.xml
<CustomField>
    <fullName>Codify_Source_Resolution_Log__c</fullName>
    <label>Codify Source Resolution Log</label>
    <type>Text</type>
    <length>18</length>
    <description
  >Id of the resolution log this draft came from. Text rather than a lookup because Knowledge article versions do not carry custom lookups cleanly across publish.</description>
</CustomField>