force-app/main/default/objects/Knowledge__kav/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>TITLE</columns>
    <columns>Codify_Root_Cause__c</columns>
    <columns>Codify_Source_Case__c</columns>
    <columns>Codify_Generated__c</columns>
    <columns>PUBLISH_STATUS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>