force-app/main/default/objects/Knowledge__kav/listViews/Codify_Drafts_Pending_Review.listView-meta.xml
<ListView>
    <fullName>Codify_Drafts_Pending_Review</fullName>
    <columns>TITLE</columns>
    <columns>Codify_Root_Cause__c</columns>
    <columns>Codify_Source_Case__c</columns>
    <columns>PUBLISH_STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Codify_Generated__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Codify Drafts Pending Review</label>
</ListView>